# New-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
artifacts/forecasts/: latest_drawdown_forecast.csv  latest_drawdown_paths.npz  latest_drawdown_summary.json  latest_forecast_summary.json  latest_monte_carlo_samples.npz
artifacts/metadata/: config_snapshot.yaml  hmm_diagnostics.json  run_metadata.json
artifacts/models/: final_hmm.joblib
configs/: default.yaml  experimental.yaml  full.yaml  quick.yaml
docs/: acceptance_matrix.md  architecture_review.md
reports/: executive_summary.md  model_report.md
reports/diagnostics/: data_quality.json  run_diagnostics.json
reports/tables/: ablation_results.csv  ablation_results.md  acceptance_results.csv  adaptive_convergence.csv  adaptive_convergence.md  before_after_metrics.csv  before_after_metrics.md  calibration_metrics.csv  calibration_metrics.md  conformal_test_comparison.md  drawdown_acceptance_results.csv  drawdown_acceptance_results.md  drawdown_adaptive_status.csv  drawdown_adaptive_status.md  drawdown_anchor_comparison.csv  (+63 more)
scripts/: generate_report.py  run_all.py  run_backtest.py  run_forecast.py
tests/: conftest.py  test_bootstrap.py  test_conformal.py  test_data.py  test_drawdown_forecast.py  test_features.py  test_hmm.py  test_importance_sampling.py  test_leakage.py  test_metrics.py  test_point_forecast.py  test_resampling_influence.py  test_simulation.py  test_smoke_pipeline.py  test_splits.py
(+96 files in other folders)
