[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnindex-regime-forest"
version = "1.0.0"
description = "Leakage-safe regime-aware VN-Index forecasting and risk simulation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Nguyễn Hoài Nam"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "arch>=7.0",
  "hmmlearn>=0.3",
  "matplotlib>=3.8",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
vnindex-model = "vnindex_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

